<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.detail.MovieDetailActivity">

    <include layout="@layout/detail_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/double_margin"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/image_container"
                style="@style/Widget.Material3.CardView.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/double_margin"

                app:cardCornerRadius="16dp"
                app:cardElevation="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="135dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/list_item_portrayable_image"
                    android:scaleType="centerCrop" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/content_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/double_margin"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
                android:textColor="?colorOnSurface"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toEndOf="@id/image_container"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Star Wars: The Rise of Skywalker" />

            <TextView
                android:id="@+id/content_subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/double_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/double_margin"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="?colorOnSurfaceVariant"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toEndOf="@id/image_container"
                app:layout_constraintTop_toBottomOf="@id/content_title"
                tools:text="17. Dezember 2019 | 2h 22min \nOverall Rating: 7.0, Rating: 8.0" />

            <HorizontalScrollView
                android:id="@+id/tags_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:scrollbars="none"

                app:layout_constraintTop_toBottomOf="@id/image_container"
                tools:layout_editor_absoluteX="-131dp">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/tags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/double_margin"
                    android:paddingEnd="32dp"

                    app:singleLine="true"
                    tools:ignore="RtlSymmetry">

                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/description_header"
                style="@style/DetailAttributeHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="About this Movie"

                app:layout_constraintTop_toBottomOf="@id/tags_container" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/double_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/double_margin"
                android:maxLines="16"
                android:scrollbars="vertical"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="?colorOnSurfaceVariant"

                app:layout_constraintTop_toBottomOf="@id/description_header" />

            <TextView
                android:id="@+id/linked_performers_header"
                style="@style/DetailAttributeHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="Cast"

                app:layout_constraintTop_toBottomOf="@id/description" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/linked_performers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@id/linked_performers_header" />

            <TextView
                android:id="@+id/languages_header"
                style="@style/DetailAttributeHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_languages"

                app:layout_constraintTop_toBottomOf="@id/linked_performers" />

            <TextView
                android:id="@+id/languages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/double_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/double_margin"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="?colorOnSurfaceVariant"

                app:layout_constraintTop_toBottomOf="@id/languages_header" />

            <TextView
                android:id="@+id/releases_header"
                style="@style/DetailAttributeHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/movie_releases"

                app:layout_constraintTop_toBottomOf="@id/languages" />

            <TextView
                android:id="@+id/releases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/double_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/double_margin"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="?colorOnSurfaceVariant"
                app:layout_constraintTop_toBottomOf="@id/releases_header"

                tools:text="23.01.2025 in the New York City Theater \n25.12.2027 in Mannheim SAP Arena" />

            <TextView
                android:id="@+id/production_locations_header"
                style="@style/DetailAttributeHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/movie_productionLocations"

                app:layout_constraintTop_toBottomOf="@id/releases" />

            <TextView
                android:id="@+id/production_locations"
                style="@style/DetailAttributeHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="?colorOnSurfaceVariant"

                app:layout_constraintTop_toBottomOf="@id/production_locations_header" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
