...
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/edit_title_icon"
                app:layout_constraintTop_toBottomOf="@id/button_container">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Title"
                    android:inputType="textPersonName"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>
...
                android:layout_marginEnd="@dimen/double_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/edit_title"
                app:layout_constraintTop_toBottomOf="@id/edit_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Description"
                    android:inputType="textMultiLine"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>
...
                android:layout_marginEnd="@dimen/double_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/edit_description"
                app:layout_constraintTop_toBottomOf="@id/edit_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/runtime_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Runtime (in minutes)"
                    android:inputType="number"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>
...
                android:layout_marginEnd="@dimen/double_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/edit_watch_date_icon"
                app:layout_constraintTop_toBottomOf="@id/edit_watch_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/languages_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Languages"
                    android:inputType="textPersonName"
                    android:text="" />

...
                app:endIconMode="custom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/edit_watch_date_icon"
                app:layout_constraintTop_toBottomOf="@id/edit_languages">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/releases_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Releases"
                    android:inputType="text"
                    android:text="" />

...
                android:layout_marginEnd="@dimen/double_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/edit_watch_date_icon"
                app:layout_constraintTop_toBottomOf="@id/edit_releases">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/production_location_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Production Locations"
                    android:inputType="textPersonName"
                    android:text="" />

...
