<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_release_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/release_title_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Place of release"
            android:inputType="text"
            android:text="" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_releases_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:endIconDrawable="@drawable/baseline_arrow_drop_down_24"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/release_date_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Date"
            android:inputType="textMultiLine"
            android:text="" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>